testing event listener for button press

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
-    background-color: #6b7783;
+    background-color: #69F7BE;
     color: black;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .grid-container {
