--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@
 }
 
 .main {
-    position: relative;
     grid-area: main;
     padding: 5px 100px;
 }
@@ -40,16 +39,34 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-#button{
-    position: absolute;
-    width: 10%;
-    top: 50%;
-    left: 45%;
+#meter-wrapper {
+    position: relative;
+    width: 100%
+}
 
+#meter{
+    z-index: -2;
+    position: absolute;
+    width: 75%;
+    top: 30%;
+    left: 12%;
+}
+
+#meter-indicator{
+    z-index: -1;
+    position: absolute;
+    width: 15%;
+    top: 22%;
+    left: 20%;
 }
 
 
-
+#button{
+    position: absolute;
+    width: 10%;
+    top: 120%;
+    left: 45%;
+}
 
 
 
