--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,25 @@
+body {
+    background-color: #69F7BE;
+    color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+/* Outlined text courtesy of https://stackoverflow.com/questions/4919076/outline-effect-to-text */
+.text-outlined {
+    color: white;
+    text-shadow: black 1px 1px 3px;
+    -webkit-font-smoothing: antialiased
+}
+
+.text-absolute {
+    position: absolute;
+}
+
+.shadowed {
+    box-shadow: 3px 3px 5px black;
+}
+
+
 .main-grid-container {
     display: grid;
     grid-template-areas:
@@ -19,7 +41,7 @@
 
 .main {
     grid-area: main;
-    padding: 5px 100px;
+    padding: 25px 150px ;
 }
 
 .right {
@@ -32,55 +54,22 @@
     padding: 5px;
 }
 
-
-body {
-    background-color: #69F7BE;
-    color: white;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#meter-wrapper {
+#meter-container {
     position: relative;
-    width: 100%
-}
-
-#meter{
-    z-index: -2;
+    width: 700px;
+    height: 100px;
+    background-image: url(resources/img/temp-meter.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: auto;
+  }
+  
+#meter-indicator {
     position: absolute;
-    width: 75%;
-    top: 30%;
-    left: 12%;
-}
-
-#meter-indicator{
-    z-index: -1;
-    position: absolute;
-    width: 15%;
-    top: 22%;
-    left: 20%;
+    width: auto;
+    height: 150px;
+    left: -30px;
+    bottom: -25px;
 }
 
 
-#button{
-    position: absolute;
-    width: 10%;
-    top: 120%;
-    left: 45%;
-}
-
-
-
-/* Outlined text courtesy of https://stackoverflow.com/questions/4919076/outline-effect-to-text */
-.text-outlined {
-    color: white;
-    text-shadow: black 1px 1px 3px;
-    -webkit-font-smoothing: antialiased
-}
-
-.text-absolute {
-    position: absolute;
-}
-
-.shadowed {
-    box-shadow: 3px 3px 5px black;
-}
