order sprite marks the acceptance region, win/fail logging in the console

--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,17 @@ body {
     bottom: -25px;
 }
 
+#order-ticket {
+    position: absolute;
+    width: auto;
+    height: 150px;
+    left: -40px;
+    bottom: -70px;
+}
+
+
+
+
 #button {
     width: 100px;
     margin: 25px;
